# qe-tools

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  setup.json  setup.py
.github/workflows/: .ci.yml  cd.yaml  cd.yml  ci.yaml  ci.yml  copier-update.yaml  update_changelog.py  validate_release_tag.py
.github/workflows_source/: ci.yml
.travis/precommit/: fix_setup_version.py
.utils/: fix_setup_version.py
dev/: check_commit_msg.py  update_changelog.py
docs/: conf.py  developer.md  getting_started.md  index.md
docs/design/: inputs_desired_usage.md  outputs.md  public_api.md  quicknotes.md  scope.md  units.md
docs/tutorials/: getting_started.md  outputs_desired_usage.md
qe_tools/: __init__.py  _constants.py  _qe_version.py  constants.py  exceptions.py
qe_tools/converters/: __init__.py  _structure.py
qe_tools/generators/: __init__.py  cell_conversion.py
qe_tools/parsers/: __init__.py  _cp_input.py  _input_base.py  _pw_input.py  cpinputparser.py  pwinputparser.py  qeinputparser.py
qe_tools/utils/: _qe_version.py  exceptions.py
src/qe_tools/: __about__.py  __init__.py  _constants.py  _elements.py  exceptions.py  utils.py
src/qe_tools/converters/: __init__.py  _structure.py  aiida.py  ase.py  base.py  pymatgen.py  qe.py  structure.py
src/qe_tools/extractors/: __init__.py
src/qe_tools/inputs/: __init__.py  base.py  cp.py  pw.py  utils.py
src/qe_tools/outputs/: __init__.py  bands.py  base.py  dos.py  projwfc.py  pw.py
src/qe_tools/outputs/parsers/: bands.py  base.py  dos.py  projwfc.py  pw.py  stdout.py
src/qe_tools/parsers/: __init__.py  _input_base.py  _pw_input.py  pw.py
src/qe_tools/parsers/inputs/: __init__.py  base.py  cp.py  pw.py
src/qe_tools/parsers/outputs/: pw.py
tests/: README.md  conftest.py  test_cell_conversion.py  test_extractor.py  test_parsers.py  test_version_parse.py
tests/data/: alat_coords_with_ibrav_non0.in  example_comment_in_namelist.in  example_ibrav0.in  example_ibrav0_alat.in  example_ibrav0_bohr.in  example_ibrav0_crystal.in  example_ibrav0_error_multiplekeys.in  example_ibrav0_ifpos.in  example_ibrav0_multiplespecies.in  example_ibrav0_nounits_cp.in  example_ibrav0_nounits_pw.in  example_ibrav0_uppercaseunits.in  example_mixture_windows_linux_newlines.in  lattice_ibrav0_cell_parameters.in  lattice_ibrav0_cell_parameters_a.in  lattice_ibrav0_cell_parameters_ang.in  lattice_ibrav0_cell_parameters_celldm.in  lattice_ibrav0_cell_parameters_int.in  lattice_ibrav1.in  lattice_ibrav10.in  lattice_ibrav11.in  lattice_ibrav12.in  lattice_ibrav13.in  lattice_ibrav14.in  lattice_ibrav1_kauto.in  lattice_ibrav2.in  lattice_ibrav3.in  lattice_ibrav4.in  lattice_ibrav5.in  lattice_ibrav6.in  lattice_ibrav7.in  lattice_ibrav8.in  lattice_ibrav9.in  lattice_ibrav91.in  lattice_ibrav_12.in  lattice_ibrav_13.in  lattice_ibrav_3.in  lattice_ibrav_5.in  no_newline_exponential_time.in  non_matching_species.in
tests/data/extractor_ref/: cp.json  pw.json
tests/data/ref/: alat_coords_with_ibrav_non0.json  example_comment_in_namelist.json  example_ibrav0.json  example_ibrav0_alat.json  example_ibrav0_bohr.json  example_ibrav0_crystal.json  example_ibrav0_ifpos.json  example_ibrav0_multiplespecies.json  example_ibrav0_uppercaseunits.json  example_mixture_windows_linux_newlines.json  lattice_ibrav0_cell_parameters.json  lattice_ibrav0_cell_parameters_a.json  lattice_ibrav0_cell_parameters_ang.json  lattice_ibrav0_cell_parameters_celldm.json  lattice_ibrav0_cell_parameters_int.json  lattice_ibrav1.json  lattice_ibrav10.json  lattice_ibrav11.json  lattice_ibrav12.json  lattice_ibrav13.json  lattice_ibrav14.json  lattice_ibrav1_kauto.json  lattice_ibrav2.json  lattice_ibrav3.json  lattice_ibrav4.json  lattice_ibrav5.json  lattice_ibrav6.json  lattice_ibrav7.json  lattice_ibrav8.json  lattice_ibrav9.json  lattice_ibrav91.json  lattice_ibrav_12.json  lattice_ibrav_13-6.4.0.json  lattice_ibrav_13.json  lattice_ibrav_3.json  lattice_ibrav_5.json  no_newline_exponential_time.json  non_matching_species.json
tests/outputs/: conftest.py  test_bands_output.py  test_base.py  test_dos_output.py  test_projwfc_output.py  test_pw_output.py
tests/outputs/fixtures/bands/mgo/: MgO-bands.dat.rap  bands.out
tests/outputs/fixtures/dos/collinear/: dos.out  prefix.dos
tests/outputs/fixtures/dos/nospin/: dos.out  prefix.dos
tests/outputs/fixtures/projwfc/mgo/: MgO-pdos.dat.pdos_atm#1(Mg)_wfc#1(s)  MgO-pdos.dat.pdos_atm#1(Mg)_wfc#2(p)  MgO-pdos.dat.pdos_atm#2(O)_wfc#1(s)  MgO-pdos.dat.pdos_atm#2(O)_wfc#2(p)  MgO-pdos.dat.pdos_tot  projwfc.out
tests/outputs/fixtures/pw/collinear/: data-file-schema.xml  pw.out
tests/outputs/fixtures/pw/default_xml_210716/: pw.out
tests/outputs/fixtures/pw/default_xml_211101/: pw.out
tests/outputs/fixtures/pw/default_xml_220603/: pw.out
tests/outputs/fixtures/pw/default_xml_230310/: pw.out
tests/outputs/fixtures/pw/default_xml_240411/: pw.out
tests/outputs/fixtures/pw/failed_no_xml/: pw.out
tests/outputs/fixtures/pw/insulator_homo/: scf.out
tests/outputs/fixtures/pw/nospin/: data-file-schema.xml  pw.out
tests/outputs/fixtures/pw/tot_magnetization/: data-file-schema.xml  pw.out
tests/outputs/parsers/: test_projwfc_parser.py
tests/outputs/test_bands_output/: test_bands_mgo.yml
tests/outputs/test_dos_output/: test_default_xml_collinear_.yml  test_default_xml_nospin_.yml
tests/outputs/test_projwfc_output/: test_projwfc_mgo.yml
tests/outputs/test_pw_output/: test_ase_outputs.yml  test_default_xml_190304_.yml  test_default_xml_191206_.yml  test_default_xml_200420_.yml  test_default_xml_210716_.yml  test_default_xml_211101_.yml  test_default_xml_220603_.yml  test_default_xml_230310_.yml  test_default_xml_240411_.yml  test_default_xml_250521_.yml  test_failed_failed_no_xml_.yml  test_insulator_homo.yml  test_pymatgen_outputs.yml  test_success_base_collinear_.yml  test_tot_magnetization.yml
